[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allostery"
version = "0.0.0"
description = "Allostery research package"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
  "PyYAML",
]

[project.scripts]
allostery = "allostery.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
